--- a/css.html
+++ b/css.html
@@ -58,6 +58,6 @@
 	checkmark Kishu is currently not ranked on the Baby Names popularity charts
 	checkmark Kishu is currently not ranked in U.S. births
 </p>
-<a href="Coursera_week1_solution.html">Home</a>
+<a href="index.html">Home</a>
 </body>
 </html>
