--- a/pract.html
+++ b/pract.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/pract.css">
+<link rel="stylesheet" href="pract.css">
 </head
 <body>
 <div class="table-users">
