--- a/animation.html
+++ b/animation.html
@@ -23,10 +23,10 @@
 </head>
 <body>
 	<center>
-<img src="C://Users//agnch//Documents//Microsoft//Images//bus1.jpg" height="250" width="250">
-<img src="C://Users//agnch//Documents//Microsoft//Images//bus2.jpg"  height="250" width="250">
-<img src="C://Users//agnch//Documents//Microsoft//Images//bus4.jpg" height="250" width="250">
+<img src="bus1.jpg" height="250" width="250">
+<img src="bus2.jpg"  height="250" width="250">
+<img src="bus4.jpg" height="250" width="250">
 </center>
-<a href="Coursera_week1_solution.html">Home</a>
+<a href="index.html">Home</a>
 </body>
 </html>
